# saic-python-mqtt-gateway

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  abrp_api.py  charging-stations.json.sample_openWB_2.0  charging_station.py  configuration.py  docker-compose.yml  home_assistant_discovery.py  log_publisher.py  mqtt-gateway.py  mqtt.py  mqtt_gateway.py  mqtt_publisher.py  mqtt_topics.py  publisher.py  pyproject.toml  refresh_mode.py  requirements.txt  saic_api_listener.py  utils.py  vehicle.py
.github/workflows/: build_and_test_python.yml  build_python_mqtt_dev_images.yml  build_python_mqtt_images.yml
configuration/: __init__.py  argparse_extensions.py  parser.py
examples/: charging-stations.json.sample
handlers/: message.py  relogin.py  vehicle.py
integrations/: __init__.py
integrations/abrp/: api.py
integrations/home_assistant/: discovery.py
integrations/openwb/: charging_station.py
integrations/osmand/: api.py
publisher/: core.py  log_publisher.py  mqtt_publisher.py
saicapi/: common_model.py  publisher.py  ws_api.py
saicapi/ASN.1_schema/: ApplicationDataMP.asn1  DispatcherBody.asn1  DispatcherBodyMP.asn1  DispatcherHeader.asn1
saicapi/ASN.1_schema/v1_1/: ApplicationData.asn1  MP_DispatcherBody.asn1  MP_DispatcherHeader.asn1
saicapi/ASN.1_schema/v2_1/: ApplicationData.asn1  MP_DispatcherBody.asn1  MP_DispatcherHeader.asn1
saicapi/ASN.1_schema/v3_0/: ApplicationData.asn1
saicapi/ota_v1_1/: Message.py  data_model.py
saicapi/ota_v2_1/: Message.py  data_model.py
saicapi/ota_v3_0/: Message.py  data_model.py
src/: exceptions.py  log_config.py  main.py  mqtt_gateway.py  mqtt_topics.py  saic_api_listener.py  utils.py  vehicle.py  vehicle_info.py
src/configuration/: __init__.py  argparse_extensions.py  parser.py
src/handlers/: command.py  message.py  relogin.py  vehicle.py  vehicle_command.py
src/handlers/command/: __init__.py  base.py
src/handlers/command/climate/: __init__.py  climate_back_window_heat.py  climate_front_window_heat.py  climate_heated_seats_level.py  climate_remote_climate_state.py  climate_remote_temperature.py
src/handlers/command/doors/: __init__.py  doors_boot.py  doors_locked.py
src/handlers/command/drivetrain/: __init__.py  drivetrain_battery_heating.py  drivetrain_battery_heating_schedule.py  drivetrain_chargecurrent_limit.py  drivetrain_charging.py  drivetrain_charging_cable_lock.py  drivetrain_charging_schedule.py  drivetrain_hv_battery_active.py  drivetrain_soc_target.py
src/handlers/command/gateway/: __init__.py  refresh_mode.py  refresh_period.py
src/handlers/command/location/: __init__.py  location_find_my_car.py
src/integrations/: __init__.py
src/integrations/abrp/: api.py
src/integrations/home_assistant/: availability.py  base.py  discovery.py  utils.py
src/integrations/openwb/: charging_station.py
src/integrations/osmand/: api.py
src/publisher/: core.py  log_publisher.py  mqtt_publisher.py
src/status_publisher/: __init__.py  message.py  vehicle_info.py
src/status_publisher/charge/: chrg_mgmt_data.py  chrg_mgmt_data_resp.py  rvs_charge_status.py
src/status_publisher/vehicle/: basic_vehicle_status.py  gps_position.py  vehicle_status_resp.py
tests/: __init__.py  common_mocks.py  test_Message_v1_1.py  test_Message_v2_1.py  test_Message_v3_0.py  test_mqtt_publisher.py  test_utils.py  test_vehicle_handler.py  test_vehicle_state.py  test_ws_api.py
tests/handlers/command/: test_command_compatibiltiy.py
tests/mocks/: __init__.py
